--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ button {
 
 body {
   background-color: bisque;
+  overflow: hidden;
 }
 
 button:active {
@@ -61,15 +62,15 @@ button:active {
   justify-items: center;
   align-items: center;
   background-color: #9a8a7c;
-  border-radius: 10px;
+  border-radius: 4px;
   padding: 10px;
   margin: auto;
 }
 
 .tile {
-  border-radius: 5px;
-  width: 100%;
-  height: 100%;
+  border-radius: 2px;
+  width: 95%;
+  height: 95%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -132,7 +133,6 @@ background-color: #8b0000;
 color: #fff;
 }
 #message {
-  display: none;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -142,7 +142,7 @@ color: #fff;
   height: 45vw;
   max-width: 500px;
   max-height: 250px;
-  border-radius: 10px;
+  border-radius: 2px;
   position: fixed;
   top: 50%;
   left: 50%;
